fix header center align

--- a/assets/stylesheets/pm_dashboard.css
+++ b/assets/stylesheets/pm_dashboard.css
@@ -19,10 +19,10 @@ table.pmsummary { float: right; margin: 10px 0; border-collapse: collapse;}
 
 table#risks tr td{ font-size: 11px;}
 table#risks tr.risks_header { padding: 1px; background-color: #EEEEEE;}
-table#risks tr th { white-space: normal; }
+table#risks tr th { white-space: normal; height: 75px}
 table#risks tr th.narrow {
   background-color: transparent;
-  /*width: 1px;*/
+  width: 1px;
   zoom: 1;
   -moz-transform: rotate(270deg);  /* FF3.5+ */
   -o-transform: rotate(270deg);  /* Opera 10.5 */
